Bug 1589826 - Remove the megabar's "focused & collapsed" state. r=harry
Differential Revision: https://phabricator.services.mozilla.com/D49824

UltraBlame original commit: 283c5335d006f25e97766ccc31bbf7725c15ee24

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -612,7 +612,9 @@
 .tab-drop-indicator {
   list-style-image: url(chrome://browser/skin/tabbrowser/tabDragIndicator.png);
   margin-top: -2px;
-  z-index: 3;
+  
+
+  z-index: 4;
 }
 
 @media (min-resolution: 2dppx) {
